--- a/templates/components/base.html
+++ b/templates/components/base.html
@@ -47,7 +47,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <!-- Titulo -->
     <title>{% block title %} SGV {% endblock title %}</title>
-
+    <script src="//code.tidio.co/pcv4wa18tpvsa0dijocizp0eulktfbwt.js" async></script>
     <script>
         // Aplicar el tema tan pronto como sea posible
         		(function () {
@@ -541,46 +541,46 @@
         <!-- Botón de Accesibilidad -->
         <style>
             @keyframes pulse {
-            				0% {
-            					box-shadow: 0 0 0 0 rgba(66, 153, 225, 0.7);
-            				}
-            				70% {
-            					box-shadow: 0 0 0 15px rgba(66, 153, 225, 0);
-            				}
-            				100% {
-            					box-shadow: 0 0 0 0 rgba(66, 153, 225, 0);
-            				}
-            			}
-            		
-            			#dropdownDefaultButton {
-            				animation: pulse 2s infinite;
-            				position: fixed;
-            				bottom: 140px; /* Movido más arriba */
-            				left: 32px;
-            				width: 50px;
-            				height: 50px;
-            				border-radius: 50%;
-            				display: flex;
-            				align-items: center;
-            				justify-content: center;
-            				z-index: 50;
-            			}
-            		
-            			#dropdown {
-            				position: fixed;
-            				bottom: 200px; /* Posicionado encima del botón */
-            				left: 32px;
-            				transform: translateY(10px);
-            				opacity: 0;
-            				visibility: hidden;
-            				transition: transform 0.3s ease, opacity 0.3s ease, visibility 0.3s;
-            			}
-            		
-            			#dropdown.show {
-            				transform: translateY(0);
-            				opacity: 1;
-            				visibility: visible;
-            			}
+                                    0% {
+                                        box-shadow: 0 0 0 0 rgba(66, 153, 225, 0.7);
+                                    }
+                                    70% {
+                                        box-shadow: 0 0 0 15px rgba(66, 153, 225, 0);
+                                    }
+                                    100% {
+                                        box-shadow: 0 0 0 0 rgba(66, 153, 225, 0);
+                                    }
+                                }
+                            
+                                #dropdownDefaultButton {
+                                    animation: pulse 2s infinite;
+                                    position: fixed;
+                                    bottom: 140px; /* Movido más arriba */
+                                    left: 32px;
+                                    width: 50px;
+                                    height: 50px;
+                                    border-radius: 50%;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    z-index: 50;
+                                }
+                            
+                                #dropdown {
+                                    position: fixed;
+                                    bottom: 200px; /* Posicionado encima del botón */
+                                    left: 32px;
+                                    transform: translateY(10px);
+                                    opacity: 0;
+                                    visibility: hidden;
+                                    transition: transform 0.3s ease, opacity 0.3s ease, visibility 0.3s;
+                                }
+                            
+                                #dropdown.show {
+                                    transform: translateY(0);
+                                    opacity: 1;
+                                    visibility: visible;
+                                }
         </style>
 
         <button id="dropdownDefaultButton" class="text-white bg-blue-500 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
@@ -590,9 +590,25 @@
         <!-- Dropdown menu -->
         <div id="dropdown" class="z-10 bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700">
             <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton">
-                <li>
 
-                    <!-- Selector de idioma -->
+                <!-- Sección mejorada para controles de zoom -->
+                <li>
+                    <div class="flex justify-center items-center space-x-4">
+                        <button onclick="changeZoom('in')" class="zoom-button text-blue-500 hover:text-blue-700">
+                            <i class="fas fa-search-plus text-2xl"></i>
+                        </button>
+                        <button onclick="changeZoom('out')" class="zoom-button text-blue-500 hover:text-blue-700">
+                            <i class="fas fa-search-minus text-2xl"></i>
+                        </button>
+                        <button onclick="resetZoom()" id="zoomResetButton" class="zoom-button text-blue-500 hover:text-blue-700">
+                            <i class="fas fa-undo text-2xl"></i>
+                        </button>
+                    </div>
+                </li>
+
+
+                <!-- Selector de idioma -->
+                <li>
                     <div class="flex items-center md:order-2 space-x-1 md:space-x-0 rtl:space-x-reverse">
                         <form action="{% url 'core:set_language' %}" method="post" id="language-form">
                             {% csrf_token %}
@@ -639,28 +655,45 @@
                             </div>
                         </form>
                     </div>
-				</li>
-			</ul>
-		</div>
+                </li>
+            </ul>
+        </div>
 
+        <script>
+            const button = document.getElementById('dropdownDefaultButton');
+                            const dropdown = document.getElementById('dropdown');
+                        
+                            button.addEventListener('click', () => {
+                                dropdown.classList.toggle('show');
+                            });
+                        
+                            // Cerrar el dropdown si se hace clic fuera de él
+                            document.addEventListener('click', (event) => {
+                                if (!button.contains(event.target) && !dropdown.contains(event.target)) {
+                                    dropdown.classList.remove('show');
+                                }
+                            });
 
-    <script>
-        const button = document.getElementById('dropdownDefaultButton');
-        			const dropdown = document.getElementById('dropdown');
-        		
-        			button.addEventListener('click', () => {
-        				dropdown.classList.toggle('show');
-        			});
-        		
-        			// Cerrar el dropdown si se hace clic fuera de él
-        			document.addEventListener('click', (event) => {
-        				if (!button.contains(event.target) && !dropdown.contains(event.target)) {
-        					dropdown.classList.remove('show');
-        				}
-        			});
-    </script>
-    </div>
-    <!-- Cierre del contenedor para botones -->
+                            // Funciones para controlar el zoom
+                let currentZoom = 100;
+
+                function changeZoom(direction) {
+                    if (direction === 'in') {
+                        currentZoom += 10;
+                    } else if (direction === 'out') {
+                        currentZoom -= 10;
+                    }
+                    currentZoom = Math.max(50, Math.min(currentZoom, 200)); // Limitar entre 50% y 200%
+                    document.body.style.zoom = `${currentZoom}%`;
+                }
+
+                function resetZoom() {
+                    currentZoom = 100;
+                    document.body.style.zoom = '100%';
+                }
+        </script>
+        </div>
+        <!-- Cierre del contenedor para botones -->
 
     <!-- Footer -->
     <footer class="dark:bg-principal w-full mx-auto p-0">
