--- a/templates/security/users/form.html
+++ b/templates/security/users/form.html
@@ -1,39 +1,37 @@
-{% extends 'components/base.html' %}
-{% block content %}
-{% load static %}
+{% extends 'components/base.html' %} {% block content %} {% load static %}
 <title>{% block title %} {{ title }} {% endblock title %}</title>
 <section class="dark:bg-principal py-20">
     <div class="container mx-auto p-4" data-aos="fade-up" data-aos-delay="300">
-                               <!-- Cinta de navegación -->
-                               <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
-                                <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
-                                <li class="inline-flex items-center">
-                                    <a href="/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-                                    <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                                        <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
-                                    </svg>
-                                    Home
-                                    </a>
-                                </li>
-                                <li>
-                                    <div class="flex items-center">
-                                    <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-                                    </svg>
-                                    <a href="http://127.0.0.1:8000/security/user/list/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">Consulta de Usuarios</a>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="flex items-center">
-                                    <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-                                    </svg>
-                                    <a href="http://127.0.0.1:8000/security/user/create/" class="ms-1 text-sm font-medium text-blue-700 hover:text-blue-600 md:ms-2 dark:text-blue-600 dark:hover:text-white">Actualizar Usuarios</a>
-                                    </div>
-                                </li>
-                                </ol>
-                            </nav>
-                            <br>
+        <!-- Cinta de navegación -->
+        <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
+            <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+                <li class="inline-flex items-center">
+                    <a href="/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+                        <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                            <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z" />
+                        </svg>
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <div class="flex items-center">
+                        <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
+                        </svg>
+                        <a href="http://127.0.0.1:8000/security/user/list/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">Consulta de Usuarios</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="flex items-center">
+                        <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
+                        </svg>
+                        <a href="http://127.0.0.1:8000/security/user/create/" class="ms-1 text-sm font-medium text-blue-700 hover:text-blue-600 md:ms-2 dark:text-blue-600 dark:hover:text-white">Actualizar Usuarios</a>
+                    </div>
+                </li>
+            </ol>
+        </nav>
+        <br>
         <div class="sm:pt-28 lg:pt-4">
             <h1 class="dark:text-white text-4xl text-center mt-6 font-Pacifico">
                 {{ grabar }}
@@ -41,10 +39,10 @@
             <p class="dark:text-gray-300 text-lg text-center mt-2">Complete el formulario para guardar un nuevo registro.</p>
         </div>
         <form method="post" enctype="multipart/form-data" class="space-y-6 py-4">
-            <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mx-4 lg:mx-20" data-aos="fade">
-                <!-- Columna de la izquierda (Mapa) -->
-                <div class="bg-gray-50 dark:bg-secundario rounded-3xl flex flex-col justify-center items-center p-8" data-aos="fade-right" data-aos-delay="200">
-                    <div id="map" class="w-full h-64 lg:h-full"></div>
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 justify-center items-center" data-aos="fade">
+                <!-- Columna del mapa -->
+                <div class="bg-gray-50 dark:bg-secundario p-4 rounded-3xl text-center flex flex-col items-center">
+                    <div id="map" class="w-full h-64 lg:h-full" style="min-height: 400px;"></div>
                 </div>
                 <!-- Columna del centro -->
                 <div class="bg-gray-50 dark:bg-secundario rounded-3xl flex flex-col justify-center items-center p-8" data-aos="fade-right" data-aos-delay="200">
@@ -52,16 +50,14 @@
                         <label for="{{ form.image.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.image.label }}</label>
                         <div id="imagenPreview" class="w-full">
                             {% if form.image.value %}
-                                <img id="imagenSeleccionada" src="{{ form.image.value.url }}" class="mx-auto d-block rounded-lg" alt="Imagen">
-                            {% else %}
-                                <img id="imagenSeleccionada" src="{% static 'img/models/default_supplier.png' %}" class="mx-auto d-block rounded-lg" alt="Imagen por defecto">
-                            {% endif %}
+                            <img id="imagenSeleccionada" src="{{ form.image.value.url }}" class="mx-auto d-block rounded-lg" alt="Imagen"> {% else %}
+                            <img id="imagenSeleccionada" src="{% static 'img/models/default_supplier.png' %}" class="mx-auto d-block rounded-lg" alt="Imagen por defecto"> {% endif %}
                         </div>
                         <div class="flex items-center justify-center w-full mt-4">
                             <label for="dropzone-file" class="mb-4 flex flex-col items-center justify-center w-full h-30 border-2 border-gray-300 border-dashed rounded-lg cursor-pointer bg-gray-50 dark:bg-secundario hover:bg-gray-100 dark:border-gray-600 dark:hover:border-gray-500 dark:hover:bg-[#060b16]">
                                 <div class="flex flex-col items-center justify-center pt-5 pb-6">
                                     <svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2"/>
+                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2" />
                                     </svg>
                                     <p class="mb-2 text-sm text-gray-500 dark:text-gray-400"><span class="font-semibold">Seleccione</span> archivo a subir</p>
                                 </div>
@@ -75,14 +71,12 @@
                     {% csrf_token %}
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                         <!-- Agregar aquí los campos del formulario -->
-                        {% for field in form %}
-                            {% if field.name != 'image' %}
-                                <div class="mb-8">
-                                    <label for="{{ field.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ field.label }}</label>
-                                    {{ field }}
-                                </div>
-                            {% endif %}
-                        {% endfor %}
+                        {% for field in form %} {% if field.name != 'image' %}
+                        <div class="mb-8">
+                            <label for="{{ field.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ field.label }}</label>
+                            {{ field }}
+                        </div>
+                        {% endif %} {% endfor %}
                     </div>
                 </div>
             </div>
@@ -211,7 +205,31 @@
             ]);
             map.fitBounds(poly.getBounds());
             updateMarkerAndFields(e.geocode.center.lat, e.geocode.center.lng);
+    
+            // Ocultar el filtro de lugares después de seleccionar un resultado
+            document.querySelector('.leaflet-control-geocoder-form input').blur();
         }).addTo(map);
+    
+        var searchBox = document.querySelector('.leaflet-control-geocoder-form input');
+    
+        searchBox.addEventListener('input', function() {
+            var searchText = searchBox.value;
+            if (searchText.length > 0) {
+                var resultsContainer = document.querySelector('.leaflet-control-geocoder-alternatives');
+                resultsContainer.style.display = 'block';
+            }
+        });
+    
+        document.querySelector('.leaflet-control-geocoder-form input').addEventListener('blur', function() {
+            var resultsContainer = document.querySelector('.leaflet-control-geocoder-alternatives');
+            resultsContainer.style.display = 'none';
+        });
+    
+        // Auto-submit the form when a result is selected from the geocoder
+        document.querySelector('.leaflet-control-geocoder-alternatives').addEventListener('click', function() {
+            var resultsContainer = document.querySelector('.leaflet-control-geocoder-alternatives');
+            resultsContainer.style.display = 'none';
+        });
     
         // Añadir botón para centrar en la ubicación del usuario
         L.control.locate({
@@ -248,5 +266,6 @@
     
         updateMapFromFields();
     });
-    </script>
+</script>
+
 {% endblock content %}
