--- a/templates/core/companies/form.html
+++ b/templates/core/companies/form.html
@@ -39,7 +39,7 @@
             <p class="dark:text-gray-300 text-lg text-center mt-2">Complete el formulario para guardar un nuevo registro.</p>
         </div>
         <form method="post" enctype="multipart/form-data" class="space-y-6 py-4">
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mx-4 lg:mx-20" data-aos="fade">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mx-4" data-aos="fade">
                 <!-- Columna de la izquierda -->
                 <div class="bg-gray-50 dark:bg-secundario rounded-3xl flex flex-col justify-center items-center p-8" data-aos="fade-right" data-aos-delay="200">
                     <div class="w-[50%] text-center flex flex-col justify-center items-center">
