--- a/templates/security/users/list.html
+++ b/templates/security/users/list.html
@@ -4,28 +4,28 @@
 <title>{% block title %}{{ title1 }}{% endblock title %}</title>
 <section class="dark:bg-principal py-20">
     <div class="container mx-auto p-4" data-aos="fade-up" data-aos-delay="300">
-                               <!-- Cinta de navegación -->
-                               <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
-                                <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
-                                <li class="inline-flex items-center">
-                                    <a href="/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-                                    <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                                        <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
-                                    </svg>
-                                    Home
-                                    </a>
-                                </li>
-                                <li>
-                                    <div class="flex items-center">
-                                    <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-                                    </svg>
-                                    <a href="http://127.0.0.1:8000/security/user/list/" class="ms-1 text-sm font-medium text-blue-700 hover:text-blue-600 md:ms-2 dark:text-blue-600 dark:hover:text-white">Consulta de Usuarios</a>
-                                    </div>
-                                </li>
-                                </ol>
-                            </nav>
-                            <br>
+    <!-- Cinta de navegación -->
+    <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
+        <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+            <li class="inline-flex items-center">
+                <a href="/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+                <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                    <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
+                </svg>
+                Home
+                </a>
+            </li>
+            <li>
+                <div class="flex items-center">
+                <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+                </svg>
+                <a href="http://127.0.0.1:8000/security/user/list/" class="ms-1 text-sm font-medium text-blue-700 hover:text-blue-600 md:ms-2 dark:text-blue-600 dark:hover:text-white">Consulta de Usuarios</a>
+                </div>
+            </li>
+        </ol>
+    </nav>
+    <br>
         <div class="flex flex-col items-center justify-center">
             <span class="bg-navbar rounded-full bg-indigo-500 px-2 py-1 text-white uppercase text-sm">
                 {{ title1 }}
@@ -66,8 +66,6 @@
                             <th scope="col" class="px-6 py-3">Correo</th>
                             <th scope="col" class="px-6 py-3">Celular</th>
                             <th scope="col" class="px-6 py-3">Ubicación</th>
-                            <th scope="col" class="px-6 py-3">Latitud</th>
-                            <th scope="col" class="px-6 py-3">Longitud</th>
                             <th scope="col" class="px-6 py-3">Admin</th>
                             <th scope="col" class="px-6 py-3">Estado</th>
                             <th scope="col" class="px-6 py-3">Acciones</th>
@@ -87,14 +85,24 @@
                             <td class="px-6 py-4">{{ item.first_name }} {{item.last_name }}</td>
                             <td class="px-6 py-4">{{ item.email }}</td>
                             <td class="px-6 py-4">{{ item.phone }}</td>
-                            <td class="px-6 py-4">{{ item.direction }}</td>
-                            <td class="px-6 py-4">{{ item.customer.latitude }}</td>
-                            <td class="px-6 py-4">{{ item.customer.longitude }}</td>
+                            <td class="px-6 py-4">
+                                <button id="dropdownButton{{ item.id }}" onclick="toggleDropdown('{{ item.id }}')" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-principal dark:hover:bg-secundario dark:focus:ring-blue-800" type="button">
+                                    <i class="fa-solid fa-map-location-dot text-white dark:text-blue-300"></i>
+                                </button>
+                                <!-- Dropdown menu -->
+                                <div id="dropdown{{ item.id }}" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-secundario absolute">
+                                    <ul class="py-2 text-gray-700 dark:text-gray-200" aria-labelledby="dropdownButton{{ item.id }}">
+                                        <li class="px-6 py-4">{{ item.direction }}</li>
+                                        <li class="px-6 py-4">{{ item.customer.latitude }}</li>
+                                        <li class="px-6 py-4">{{ item.customer.longitude }}</li>
+                                    </ul>
+                                </div>
+                            </td>
                             <td class="px-6 py-4">
                                 {% if item.is_staff %}
                                 <i class="fa-solid fa-check text-green-500"></i>
                                 {% else %}
-                                <i class="fa-solid fas fa-eye-slash text-red-500"></i>
+                                <i class="fa-solid fa-xmark text-red-500"></i>
                                 {% endif %}
                             </td>
                             <td class="px-6 py-4">
@@ -105,10 +113,10 @@
                                 {% endif %}
                             </td>
                             <td class="px-6 py-4">
-                                <a href="{% url 'security:user_update' item.id %}"
+                                <!-- <a href="{% url 'security:user_update' item.id %}"
                                     class="text-blue-600 dark:text-blue-500">
                                     <i class="fa-solid fa-gear"></i>
-                                </a>
+                                </a> -->
                                 <a href="#" class="text-red-600 dark:text-red-500"
                                     onclick="openDeleteModal('{{ item.id }}', '{{ item.username }}')">
                                     <i class="fa-solid fa-trash"></i>
