Solucion de Errores

--- a/templates/components/base.html
+++ b/templates/components/base.html
@@ -1266,6 +1266,13 @@
             }
         }
     </script>
+
+    <!-- SCRIPT DE SUGERENCIA -->
+<script>
+    function closeCookiePopup() {
+        document.getElementById('cookies-with-stacked-buttons').style.display = 'none';
+    }
+</script>
 </body>
 
 </html>
