--- a/templates/core/payment_methods/list.html
+++ b/templates/core/payment_methods/list.html
@@ -67,7 +67,7 @@
                             </span></p>
                     </div>
                     <div class="dark:bg-contenedores card-footer flex flex-col md:flex-row justify-center items-center">
-                        {% if permissions.changepayment_method %}
+                        {% if permissions.change_paymentmethod %}
                         <a href="{% url 'core:payment_method_update' item.id %}" class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 md:mr-2 mb-2 md:mb-0 flex items-center">
                             <i class="fa-solid fa-gear mr-2"></i> Editar
                         </a>
