--- a/templates/purchases/form.html
+++ b/templates/purchases/form.html
@@ -39,7 +39,7 @@
             <p class="dark:text-gray-300 text-lg text-center mt-2">Complete el formulario para guardar un nuevo registro.
             </p>
         </div>
-        <div class="grid gap-8 mx-10 lg:mx-20" data-aos="fade">
+        <div class="grid gap-8 mx-4" data-aos="fade-up">
             <!-- Formulario de Compra -->
             <form id="frmPurchase" method="POST" class="space-y-6">
                 {% csrf_token %} {{ form.media }}
@@ -78,10 +78,10 @@
                             Se muestra la información del producto seleccionado.
                             <br> Actualizar los campos si es necesario.
                         </div>
-                        <div class="md:flex items-center justify-between space-x-4">
-                            <div class="mb-8 flex justify-between items-center">
-                                <label for="product" class="dark:text-blue-300 font-black uppercase text-lg lg:pr-2 px-2">Producto</label>
-                                <select name="product" id="product" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                        <div class="mb-8 flex flex-col md:flex-row md:justify-center items-center text-center space-x-2">
+                            <div class="mb-8 flex justify-center items-center space-x-2 w-[50%]">
+                                <label for="product" class="dark:text-blue-300 font-black uppercase text-lg">Producto</label>
+                                <select name="product" id="product" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-[60%] p-2.5 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
                                     {% for prod in products %}
                                     <option data-id="{{ prod.id }}" data-des="{{ prod.description }}" data-cost="{{ prod.cost }}" data-stock="{{ prod.stock }}" data-iva="{{ prod.iva__value }}" value="{{ prod.id }}" {% if forloop.first %}selected{% endif %}>
                                         {{ prod.description }}
@@ -89,20 +89,21 @@
                                     {% endfor %}
                                 </select>
                             </div>
-                            <div class="mb-8 flex justify-between items-center">
-                                <label for="cost" class="dark:text-blue-300 font-black uppercase text-lg lg:pr-2 px-2">Costo</label>
-                                <input name="cost" id="cost" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" readonly>
-                            </div>                            
-                            <div class="mb-8 flex justify-between items-center">
-                                <label for="stock" class="dark:text-blue-300 font-black uppercase text-lg lg:pr-2 px-2">Cantidad</label>
-                                <input name="stock" id="stock" type="number" min="1" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                            <div class="mb-8 flex justify-center items-center space-x-2">
+                                <label for="cost" class="dark:text-blue-300 font-black uppercase text-lg">Costo</label>
+                                <input name="cost" id="cost" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-[35%] p-2.5 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light" readonly>
                             </div>
-                            <div class="mb-8 flex justify-between items-center">
+                            <div class="mb-8 flex justify-center items-center space-x-2">
+                                <label for="stock" class="dark:text-blue-300 font-black uppercase text-lg">Cantidad</label>
+                                <input name="stock" id="stock" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-[30%] p-2.5 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                            </div>
+                            <div class="mb-8 flex justify-center items-center space-x-2">
                                 <button id="btnAdd" type="button" class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mb-2 md:mr-2 md:mb-0 flex items-center justify-center w-full md:w-auto">
                                     <i class="fa-solid fa-box pr-4"></i><i class="fa-solid fa-plus"></i>
                                 </button>
                             </div>
                         </div>
+                        
                         <!-- Tabla de ventas -->
                         <div class="overflow-x-auto">
                             <div class="border-b border-blue-400 dark:text-white text-xl text-center font-Pacifico">
