--- a/templates/sales/invoices/form.html
+++ b/templates/sales/invoices/form.html
@@ -38,7 +38,7 @@
             </h1>
             <p class="dark:text-gray-300 text-lg text-center mt-2">Complete el formulario para guardar un nuevo registro.</p>
         </div>
-        <div class="grid gap-8 mx-10 lg:mx-20" data-aos="fade">
+        <div class="grid gap-8 mx-4" data-aos="fade-up">
             <!-- Formulario de Venta -->
             <form id="frmSale" method="POST" class="space-y-6">
                 {% csrf_token %} {{ form.media }}
@@ -60,24 +60,24 @@
                 <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
                     <!-- Izquierda -->
                     <div class="col-span-2 mb-8 grid justify-center items-center bg-gray-50 dark:bg-secundario p-4 rounded-3xl">
-                        <div class="md:flex items-center justify-between space-x-4">
-                            <div class="mb-8 flex justify-between items-center">
+                        <div class="mb-8 flex flex-col md:flex-row md:justify-center items-center text-center space-x-2">
+                            <div class="mb-8 flex justify-center items-center space-x-2 w-[60%]">
                                 <label for="product" class="dark:text-blue-300 font-black uppercase text-lg lg:pr-2 px-2">Producto</label>
-                                <select name="product" id="product" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                                <select name="product" id="product" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-[60%] p-2.5 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
                                     {% for prod in products %}
                                     <option data-id="{{prod.id}}" data-des="{{prod.description}}" data-price="{{prod.price}}" data-stock="{{prod.stock}}" data-iva="{{prod.iva__value}}" value="{{prod.id}}" {% if forloop.first %}selected{% endif %}>{{prod.description}}</option>
                                     {% endfor %}
                                 </select>
                             </div>
-                            <div class="mb-8 flex justify-between items-center">
+                            <div class="mb-8 flex justify-center items-center space-x-2">
                                 <label for="price" class="dark:text-blue-300 font-black uppercase text-lg lg:pr-2 px-2">Precio</label>
-                                <input name="price" id="price" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                                <input name="price" id="price" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-[40%] p-2.5 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
                             </div>
-                            <div class="mb-8 flex justify-between items-center">
+                            <div class="mb-8 flex justify-center items-center space-x-2">
                                 <label for="quantify" class="dark:text-blue-300 font-black uppercase text-lg lg:pr-2 px-2">Cantidad</label>
-                                <input name="quantify" id="quantify" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                                <input name="quantify" id="quantify" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-[30%] p-2.5 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
                             </div>
-                            <div class="mb-8 flex justify-between items-center">
+                            <div class="mb-8 flex justify-center items-center space-x-2">
                                 <button id="btnAdd" type="button" class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mb-2 md:mr-2 md:mb-0 flex items-center justify-center w-full md:w-auto">
                                     <i class="fa-solid fa-box pr-4"></i><i class="fa-solid fa-plus"></i>
                                 </button>
