--- a/templates/security/modules/list.html
+++ b/templates/security/modules/list.html
@@ -49,7 +49,7 @@
                 </form>
             </div>
         </div>
-        <div class="m-4 lg:m-8 sm:mx-40 sm:my-2 lg:grid lg:grid-cols-3 gap-8 lg:mx-20 lg:p-4 rounded-3xl" data-aos="fade-up" data-aos-delay="200">
+        <div class="m-4 lg:m-8 mx-2 lg:grid lg:grid-cols-3 gap-8 lg:p-4 rounded-3xl" data-aos="fade-up" data-aos-delay="200">
             {% for item in modules %}
             <div class="mb-4 flex justify-center custom-transform">
                 <div class="dark:bg-secundario relative w-full overflow-hidden rounded-lg border border-gray-100 bg-white shadow-md dark:border-none">
@@ -66,7 +66,7 @@
                                 <p class=" dark:text-blue-300 font-Pacifico">Descripción:<br><span class="font-light font-Quicksand dark:text-gray-400">{{ item.description }}</span></p>
                                 <p class=" dark:text-blue-300 font-Pacifico">Permisos:<br><span class="font-light font-Quicksand dark:text-gray-400">
                                     {% for permission in item.permissions.all %}
-                                        {{ permission.name }}
+                                        - {{ permission.name }}<br>
                                     {% empty %}
                                         No permissions assigned
                                     {% endfor %}
