--- a/templates/security/users/form.html
+++ b/templates/security/users/form.html
@@ -2,36 +2,36 @@
 <title>{% block title %} {{ title }} {% endblock title %}</title>
 <section class="dark:bg-principal py-20">
     <div class="container mx-auto p-4" data-aos="fade-up" data-aos-delay="300">
-                               <!-- Cinta de navegación -->
-                               <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
-                                <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
-                                <li class="inline-flex items-center">
-                                    <a href="/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-                                    <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                                        <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
-                                    </svg>
-                                    Home
-                                    </a>
-                                </li>
-                                <li>
-                                    <div class="flex items-center">
-                                    <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-                                    </svg>
-                                    <a href="http://127.0.0.1:8000/security/user/list/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">Consulta de Usuarios</a>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="flex items-center">
-                                    <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-                                    </svg>
-                                    <a href="http://127.0.0.1:8000/security/user/create/" class="ms-1 text-sm font-medium text-blue-700 hover:text-blue-600 md:ms-2 dark:text-blue-600 dark:hover:text-white">Actualizar Usuarios</a>
-                                    </div>
-                                </li>
-                                </ol>
-                            </nav>
-                            <br>
+        <!-- Cinta de navegación -->
+        <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
+            <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+                <li class="inline-flex items-center">
+                    <a href="/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+                    <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                        <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
+                    </svg>
+                    Home
+                    </a>
+                </li>
+                <li>
+                    <div class="flex items-center">
+                    <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+                    </svg>
+                    <a href="http://127.0.0.1:8000/security/user/list/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">Consulta de Usuarios</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="flex items-center">
+                    <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+                    </svg>
+                    <a href="http://127.0.0.1:8000/security/user/create/" class="ms-1 text-sm font-medium text-blue-700 hover:text-blue-600 md:ms-2 dark:text-blue-600 dark:hover:text-white">Actualizar Usuarios</a>
+                    </div>
+                </li>
+            </ol>
+        </nav>
+        <br>
         <div class="sm:pt-28 lg:pt-4">
             <h1 class="dark:text-white text-4xl text-center mt-6 font-Pacifico">
                 {{ grabar }}
@@ -39,9 +39,9 @@
             <p class="dark:text-gray-300 text-lg text-center mt-2">Complete el formulario para guardar un nuevo registro.</p>
         </div>
         <form method="post" enctype="multipart/form-data" class="space-y-6 py-4">
-            <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 mx-4 lg:mx-20" data-aos="fade">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mx-4 lg:mx-20" data-aos="fade">
                 <!-- Columna de la izquierda (Mapa) -->
-                <div class="bg-gray-50 dark:bg-secundario rounded-3xl flex flex-col justify-center items-center p-8" data-aos="fade-right" data-aos-delay="200">
+                <div class="bg-gray-50 dark:bg-secundario rounded-3xl flex flex-col justify-center items-center p-8 space-y-3" data-aos="fade-right" data-aos-delay="200">
                     <div id="map" class="w-full h-64 lg:h-full"></div>
                 </div>
                 <!-- Columna de la derecha (Campos) -->
@@ -58,15 +58,72 @@
                         </div>
                     </div>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                        <!-- Agregar aquí los campos del formulario -->
-                        {% for field in form %}
-                            {% if field.name != 'image' %}
-                                <div class="mb-8">
-                                    <label for="{{ field.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ field.label }}</label>
-                                    {{ field }}
-                                </div>
-                            {% endif %}
-                        {% endfor %}
+                        <div>
+                            <div class="mb-8">
+                                <label for="{{ form.username.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.username.label }}</label>
+                                {{ form.username }}
+                            </div>
+                            <div class="mb-8">
+                                <label for="{{ form.dni.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.dni.label }}</label>
+                                {{ form.dni }}
+                            </div>
+                            <div class="mb-8">
+                                <label for="{{ form.direction.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.direction.label }}</label>
+                                {{ form.direction }}
+                            </div>
+                            <div class="mb-8">
+                                <label for="{{ form.is_active.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.is_active.label }}</label>
+                                {{ form.is_active }}
+                            </div>
+                        </div>
+                        <div>
+                            <div class="mb-8">
+                                <label for="{{ form.first_name.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.first_name.label }}</label>
+                                {{ form.first_name }}
+                            </div>
+                            <div class="mb-8">
+                                <label for="{{ form.phone.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.phone.label }}</label>
+                                {{ form.phone }}
+                            </div>
+                            <div class="mb-8">
+                                <label for="{{ form.longitude.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.longitude.label }}</label>
+                                {{ form.longitude }}
+                            </div>
+                            <div class="mb-8">
+                                <label for="{{ form.is_staff.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.is_staff.label }}</label>
+                                {{ form.is_staff }}
+                            </div>
+                        </div>
+                        <div>
+                            <div class="mb-8">
+                                <label for="{{ form.last_name.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.last_name.label }}</label>
+                                {{ form.last_name }}
+                            </div>
+                            <div class="mb-8">
+                                <label for="{{ form.email.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.email.label }}</label>
+                                {{ form.email }}
+                            </div>
+                            <div class="mb-8">
+                                <label for="{{ form.latitude.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.latitude.label }}</label>
+                                {{ form.latitude }}
+                            </div>
+                            <div class="mb-8">
+                                <label for="{{ form.is_superuser.id_for_label }}"
+                                    class="dark:text-blue-300 font-black uppercase text-lg">{{ form.is_superuser.label }}</label>
+                                {{ form.is_superuser }}
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -309,5 +366,20 @@
     
         updateMapFromFields();
     });
-    </script>
+</script>
+
+<script>
+    // Asegúrate de que el DOM esté completamente cargado antes de ejecutar el script
+    document.addEventListener('DOMContentLoaded', function () {
+        // Selecciona la imagen y el input de archivo
+        const imagenSeleccionada = document.getElementById('imagenSeleccionada');
+        const inputArchivo = document.getElementById('dropzone-file');
+        
+        // Agrega un evento de clic a la imagen
+        imagenSeleccionada.addEventListener('click', function () {
+            // Simula un clic en el input de archivo
+            inputArchivo.click();
+        });
+    });
+</script>
 {% endblock content %}
